# YouRSS

./: .dockerignore  .env  .gitignore  API.rest  Dockerfile  Justfile  Procfile  README.md  api.rest  index.yaml  pyproject.toml  release.sh
.github/workflows/: build.yml  release.yml
charts/yourss/: Chart.yaml  values.yaml
charts/yourss/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  redis.yaml  service.yaml  serviceaccount.yaml  yourss.yaml
charts/yourss/templates/redis/: deployment.yaml  service.yaml
samples/: @jonnygiger.xml  UCVooVnzQxPSTXTMzSi1s6uw.xml  fetch.json  playlist.xml  users.yaml  videos.xml
src/yourss/: main.py  schema.py  security.py  settings.py
src/yourss/routers/: htmx.py  jinja.py  proxy.py  schema.py  web.py
src/yourss/static/: yourss.css  yourss.js
src/yourss/templates/pages/: channel.jinja-html  view.jinja-html
src/yourss/templates/partials/: errors.jinja-html  footer.jinja-html  lang-selector.jinja-html  modal.jinja-html  navbar.jinja-html  videos-container.jinja-html  videos.jinja-html
src/yourss/youtube/: __init__.py  cache.py  client.py  model.py  parser.py  schema.py  scrapper.py  utils.py
tests/: conftest.py  test_api.py  test_cache.py  test_db.py  test_json.py  test_rss.py  test_web.py  test_xml.py  test_youtube.py
yourss/: __init__.py  api.py  async_utils.py  cache.py  config.py  database.py  jsonutils.py  main.py  model.py  rss.py  schema.py  security.py  users.py  utils.py  webapp.py  youtube.py
yourss/api/: __init__.py  channel.py  jwt.py  test.py  user.py
yourss/routers/: api.py  htmx.py  jinja.py  proxy.py  utils.py  web.py  www.py
yourss/static/: app.css  commons.js  config.js  logged.js  subscriptions.js  view.js  yourss.css  yourss.js
yourss/templates/: _header.html  channel.html  config.html  login.html  rss.html  subscriptions.html  view.html
yourss/templates/pages/: channel.jinja-html  rss.jinja-html  view.jinja-html
yourss/templates/partials/: channel-videos-page.html  channel.jinja-html  errors.jinja-html  modal.jinja-html  next-page.jinja-html  tab.jinja-html  video.jinja-html
yourss/webapp/: __init__.py  api.py  cli.py  login.py  server.py  utils.py  webapp.py  www.py
yourss/youtube/: __init__.py  client.py  metadata.py  model.py  rss.py  schema.py  scrapper.py  url.py  utils.py  web.py
youtube_rss_viewer/: __init__.py  rss.py  youtube.py
youtube_rss_viewer/static/: app.js  index.html
youtube_rss_viewer/templates/: grid.html  list.html
