[tool.poetry]
name = "yourss"
version = "0.15.1"
description = "Simple Youtube browser based on RSS feeds"
homepage = "https://github.com/essembeh/yourss"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.116.1"}
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"
arrow = "^1.2.3"
loguru = "^0.7.2"
argon2-cffi = "^23.1.0"
pydantic = "^2.7.1"
pydantic-yaml = "^1.3.0"
pydantic-settings = "^2.2.1"
pydantic-xml = "^2.11.0"
rapid-api-client = "^0.8.1"
jsonpath-ng = "^1.7.0"
yarl = "^1.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-dotenv = "*"
pytest-asyncio = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
