[project]
name = "yourss"
version = "0.16.1"
description = "Simple Youtube browser based on RSS feeds"
homepage = "https://github.com/essembeh/yourss"
readme = "README.md"
authors = [
    { name = "Sébastien MB", email = "seb@essembeh.org" }
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "arrow>=1.3.0",
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "jsonpath-ng>=1.7.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydantic-xml>=2.17.3",
    "pydantic-yaml>=1.6.0",
    "rapid-api-client>=0.8.1",
    "yarl>=1.20.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "pytest-dotenv>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.7.22,<0.8"]
build-backend = "uv_build"
