[project]
name = "yourss"
version = "0.17.0"
description = "Simple Youtube browser based on RSS feeds"
homepage = "https://github.com/essembeh/yourss"
readme = "README.md"
authors = [
    { name = "Sébastien MB", email = "seb@essembeh.org" }
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "arrow>=1.4.0",
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.136.3",
    "glom>=25.12.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pydantic-xml>=2.21.0",
    "pydantic-yaml>=1.6.0",
    "rapid-api-client>=0.9.0",
    "yarl>=1.24.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-dotenv>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.7.22,<0.8"]
build-backend = "uv_build"
